# iot-protocol

./: .gitignore  README.md
lab1/: CMakeLists.txt
lab1/doc/: doc.tex  literature.bib
lab1/include/: coap.hpp  common.hpp  unix_dns_lookup.hpp  unix_tcp_socket.hpp
lab1/src/: coap.cpp  error.cpp  main.cpp  unix_tcp_socket.cpp  unix_udp_socket.cpp
lab1/test/: exampleresources.py
lab2/: CMakeLists.txt
lab2/include/: common.hpp  mqtt.hpp  mqtt_broker.hpp  unix_tcp_socket.hpp
lab2/src/: main.cpp  mqtt.cpp  mqtt_broker.cpp  unix_dns_lookup.cpp  unix_tcp_socket.cpp
project/coap-mqtt-bridge/: CMakeLists.txt
project/coap-mqtt-bridge/include/: boilerplate.hpp  common.hpp  error.hpp  socket.hpp  unix_tcp_socket.hpp  unix_udp_socket.hpp
project/coap-mqtt-bridge/src/: boilerplate.cpp  main.cpp  unix_tcp_socket.cpp  unix_udp_socket.cpp
project/coap-server/: CMakeLists.txt
project/coap-server/include/: unix_dns_lookup.hpp
project/coap-server/src/: main.cpp  unix_dns_lookup.cpp
project/doc/: .gitignore  00-terminology.tex  01-introduction.tex  02-theory.tex  03-methodology.tex  04-implementation.tex  05-results.tex  06-conclusions.tex  main..blg  main.blg  main.tex  sources.bib  titlepage.tex
project/doc/svg-inkscape/: system_svg-tex.pdf_tex
project/frontend/: index.html  script.js  style.css
project/mqtt-ws-bridge/: CMakeLists.txt
project/mqtt-ws-bridge/include/: boilerplate.hpp  websocket.hpp
project/mqtt-ws-bridge/src/: boilerplate.cpp  main.cpp  websocket.cpp
