project(lab2)
cmake_minimum_required(VERSION 3.10)
file(GLOB_RECURSE SOURCES RELATIVE ${CMAKE_SOURCE_DIR} "./src/*.cpp")
find_package (Threads)
add_executable(lab2 ${SOURCES})
set_property(TARGET lab2 PROPERTY CXX_STANDARD 20)
include_directories(include)
target_link_libraries(lab2 ${CMAKE_THREAD_LIBS_INIT})
